log
Fri 19 Aug 2022 12:23:31 PM UTC: 
 tests:  0|6
total_score: 0/70
80a85de
Fri 19 Aug 2022 12:33:19 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:41: error: expected ‘,’ or ‘;’ before ‘)’ token
   33 |   List* list=(List*)malloc(sizeof(List)));
      |                                         ^
Compilation failed
019b0fa
Fri 19 Aug 2022 12:33:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
334af94
Fri 19 Aug 2022 12:43:58 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:9: error: ‘n’ undeclared (first use in this function)
   42 |   list* n =list->current;
      |         ^
list.c:42:9: note: each undeclared identifier is reported only once for each function it appears in
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e6279c8
Fri 19 Aug 2022 12:44:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:3: error: statement with no effect [-Werror=unused-value]
   42 |   list n =list->current;
      |   ^~~~
list.c:42:7: error: expected ‘;’ before ‘n’
   42 |   list n =list->current;
      |       ^~
      |       ;
list.c:43:3: error: ‘n’ undeclared (first use in this function)
   43 |   n = list->head;
      |   ^
list.c:43:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fba0926
Fri 19 Aug 2022 12:46:28 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
8205195
Fri 19 Aug 2022 12:53:04 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:16: error: statement with no effect [-Werror=unused-value]
   42 |   list->current->data;
      |   ~~~~~~~~~~~~~^~~~~~
list.c: In function ‘pushFront’:
list.c:61:18: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   61 |   Node *newnode= createnode(data);
      |                  ^~~~~~~~~~
      |                  createNode
list.c:61:18: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:61:9: error: unused variable ‘newnode’ [-Werror=unused-variable]
   61 |   Node *newnode= createnode(data);
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
85d75b5
Fri 19 Aug 2022 12:53:41 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:18: error: statement with no effect [-Werror=unused-value]
   42 |     list->current->data;
      |     ~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
16d0637
Fri 19 Aug 2022 12:53:45 PM UTC: 
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:18: error: statement with no effect [-Werror=unused-value]
   42 |     list->current->data;
      |     ~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4e91093
Fri 19 Aug 2022 12:54:02 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
d9a40b7
Fri 19 Aug 2022 01:00:46 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:60:19: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   60 |   Node *newnode = createnode(data);
      |                   ^~~~~~~~~~
      |                   createNode
list.c:60:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:64:5: error: ‘lisy’ undeclared (first use in this function); did you mean ‘list’?
   64 |     lisy->head=newnode;
      |     ^~~~
      |     list
list.c:64:5: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
c1084b9
Fri 19 Aug 2022 01:03:39 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:59:24: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   59 |   if(list==NULL)return NULL;
      |                        ^~~~
list.c:58:6: note: declared here
   58 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:60:19: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   60 |   Node *newnode = createnode(data);
      |                   ^~~~~~~~~~
      |                   createNode
list.c:60:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:64:5: error: ‘lisy’ undeclared (first use in this function); did you mean ‘list’?
   64 |     lisy->head=newnode;
      |     ^~~~
      |     list
list.c:64:5: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
d1a1778
Fri 19 Aug 2022 01:04:31 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:59:24: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   59 |   if(list==NULL)return NULL;
      |                        ^~~~
list.c:58:6: note: declared here
   58 | void pushFront(List * list, void * data) {
      |      ^~~~~~~~~
list.c:65:5: error: ‘lisy’ undeclared (first use in this function); did you mean ‘list’?
   65 |     lisy->head=newnode;
      |     ^~~~
      |     list
list.c:65:5: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
ef1b08e
